--- a/templates/nav info/faq.html
+++ b/templates/nav info/faq.html
@@ -1,14 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}policy{% endblock %}
+{% block title %}faq{% endblock %}
 
 {% block content %}
 <div class="min-h-screen flex items-center justify-center px-4 py-10">
     <div class="w-full max-w-3xl bg-white dark:bg-gray-900 rounded-lg shadow ">
-
-        
-        <!-- Item 1 -->
         <div>
             <button class="w-full flex justify-between p-5 text-white font-semibold text-gray-800 text-gray-200 accordion-btn">
                 Question
@@ -18,8 +15,6 @@
                 <p class="p-5 text-gray-900">Answer</p>
             </div>
         </div>
-
-        <!-- Item 2 -->
          <div>
             <button class="w-full flex justify-between p-5 text-white font-semibold text-gray-800 text-gray-200 accordion-btn">
                 Question
